--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ngx-echarts": "^15.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "uuid": "^10.0.0",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "@angular/compiler-cli": "^15.0.0",
     "@types/jasmine": "~4.3.0",
     "@types/lodash": "^4.17.6",
+    "@types/uuid": "^10.0.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
