--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -31,5 +31,5 @@ jobs:
       - name: deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v4
         with:
-          deploy_key: ${{ secrets.GITHUB_TOKEN  }}
+          deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY  }}
           publish_dir: ./dist/hospital-portal
