--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -26,7 +26,7 @@ jobs:
         run: npm install
 
       - name: Build
-        run: npm run build
+        run: npm run build-gh-pages
 
       - name: deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v4
