--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build-gh-pages": "ng build --deploy-url https://nikaklokava.github.io/Hospital-Portal/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
