--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build-gh-pages": "ng build --deploy-url https://nikaklokava.github.io/Hospital-Portal/",
+    "build-gh-pages": "ng build --base-href https://nikaklokava.github.io/Hospital-Portal/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -33,6 +33,7 @@
     "@angular/compiler-cli": "^15.0.0",
     "@types/jasmine": "~4.3.0",
     "@types/lodash": "^4.17.6",
+    "angular-cli-ghpages": "^2.0.1",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
